feat!: change from String image (path) to actual byte[]